--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,8 @@
 *.exe
 *.out
 *.app
+/.vs/Algorithms/v17
+/Algorithms.vcxproj.user
+/Algorithms.vcxproj.filters
+/Algorithms.vcxproj
+/Algorithms.sln
